Fixed minor scrollbar issue in skips page

--- a/src/component/RollPage.css
+++ b/src/component/RollPage.css
@@ -40,7 +40,7 @@
     width: calc(100% - 20vw);
     left: 20vw;
     height: 85vh;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 @keyframes skips-leaving {
     0% {left: 20vw;}
